--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       "name": "Control de Presupuesto Personal",
       "description": "Aplicación web gratuita para controlar tu presupuesto personal. Gestiona ingresos, gastos, categorías y analiza tus finanzas con gráficos detallados.",
       "url": "https://control-presupuesto-seven.vercel.app/",
-      "image": "https://tu-dominio.com/img/logotipo.jpg",
+      "image": "https://control-presupuesto-seven.vercel.app/img/logotipo.jpg",
       "applicationCategory": "FinanceApplication",
       "operatingSystem": "Web",
       "browserRequirements": "Requires JavaScript. Requires HTML5.",
